--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_mixins.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_mixins.scss
@@ -7,3 +7,13 @@
 	height: 100%;
 	object-fit: cover;
 }
+
+@mixin make-button-size($size) {
+	@if $size == sm {
+		@include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
+	} @elseif $size == lg {
+		@include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
+	} @else {
+		@include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-line-height, $btn-border-radius);
+	}
+}
