--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -4,6 +4,9 @@
 	transition: transform .2s ease-out;
 	body.mobile-menu-active & {
 		transform: translate3d(-$mobile-menu-width, 0, 0);
+		@include media-breakpoint-up(md) {
+			transform: none;
+		}
 	}
 }
 
@@ -15,6 +18,7 @@
 	bottom: 0;
 	transition: transform .2s ease-out, visibility 0s .2s;
 	background-color: $dark;
+	color: #fff;
 	overflow: hidden;
 	visibility: hidden;
 	@include media-breakpoint-up(md) {
@@ -42,42 +46,114 @@
 ---------------------------------------------------------*/
 
 #mobile-menu-primary-navigation {
-	padding: 14px 0;
+	padding-bottom: 1rem;
 	ul {
 		margin: 0;
 		padding: 0;
 		list-style: none;
 	}
 	.menu {
-		font-weight: 800;
-		text-transform: uppercase;
+		font-weight: 700;
 		line-height: $line-height-sm;
-		letter-spacing: .1em;
-		font-size: 0.875rem;
+		font-size: 1rem;
 		.menu-item {
-			border-top: 1px solid mix(#fff, $dark, 10%);
+			border-bottom: 1px solid mix(#fff, $dark, 10%);
+			position: relative;
 			&:first-child {
-				border-top: none;
+				// border-top: 1px solid mix(#fff, $dark, 10%);
+			}
+			&.current-menu-item {
+				> a {
+					background-color: mix(#fff, $dark, 5%);
+					opacity: 1;
+					&:before {
+						content: '';
+						position: absolute;
+						left: 0;
+						top: 0;
+						bottom: 0;
+						border-left: 0.25rem solid $primary;
+					}
+				}
+			}
+			&.menu-item-has-sub-menu {
+				> a {
+					padding-right: 3rem;
+				}
+			}
+			&.active {
+				> .toggle:before {
+					content: '—';
+				}
 			}
 		}
 		a {
 			display: block;
-			padding: 16px 15px;
-			color: #fff;
+			padding: 1rem 1rem;
+			color: inherit;
+			position: relative;
+		}
+		.toggle {
+			position: absolute;
+			right: 0;
+			top: 0;
+			width: 3rem;
+			height: 51px;
+			overflow: hidden;
+			text-indent: -100000px;
+			background-color: transparent;
+			border: none;
+			outline: none;
+			padding: 0;
+			color: inherit;
+			&:before {
+				content: '+';
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				text-indent: 0;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				line-height: 1;
+				font-size: 1.5rem;
+				font-weight: 300;
+			}
 		}
 	}
 	.sub-menu {
-		text-transform: none;
-		letter-spacing: 0;
 		font-weight: 400;
-		margin-bottom: 20px;
+		overflow: hidden;
+		height: 0;
+		transition: height .2s ease-out;
 		.menu-item {
-			border-top: none;
+			border-bottom: none;
+			&:first-child {
+				padding-top: .5rem;
+				border-top: none;
+				.toggle {
+					top: .5rem;
+				}
+			}
+			&:last-child {
+				padding-bottom: 1rem;
+			}
 		}
 		a {
-			padding-top: 6px;
-			padding-bottom: 6px;
-			padding-left: 15px * 2;
+			padding-top: 0.5rem;
+			padding-bottom: 0.5rem;
+			padding-left: 2rem;
+		}
+		.toggle {
+			height: 35px;
+		}
+		.sub-menu {
+			a {
+				padding-left: 3rem;
+				opacity: .75;
+			}
 		}
 	}
 	
