--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -20,3 +20,43 @@
 		}
 	}
 }
+
+
+.social-links {
+	h4 {
+		margin-bottom: 1rem;
+		font-size: 1rem;
+	}
+	.menu {
+		list-style: none;
+		padding: 0;
+		margin: -0.4rem;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.menu-item {
+		padding: 0.4rem;
+		a {
+			display: flex;
+			align-items: center;
+			color: inherit;
+			transition: color .15s;
+			&:hover {
+				.icon svg {
+					fill: $primary;
+				}
+			}
+		}
+		.icon {
+			display: block;
+			svg {
+				height: 2rem;
+				fill: $body-color;
+				transition: fill .15s;
+			}
+		}
+		.label {
+			display: none;
+		}
+	}
+}
