--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -2,43 +2,39 @@
 
 // Colors
 
-$blue:       #007bff !default;
-$indigo:     #6610f2 !default;
-$purple:     #6f42c1 !default;
-$pink:       #e83e8c !default;
-$red:        #dc3545 !default;
-$orange:     #fd7e14 !default;
-$yellow:     #ffc107 !default;
-$green:      #28a745 !default;
-$teal:       #20c997 !default;
-$cyan:       #17a2b8 !default;
-$dark-gray:  #343a40 !default;
-$ghost:      #FAFAFA !default;
-$white:      #FFFFFF !default;
+$dark-blue:    #233053 !default;
+$blue:         #108DBC !default;
+$light-blue:   #D0E4F8 !default;
+$x-light-blue: #F4F8FD !default;
+$red:          #D44457 !default;
+$green:        #AED540 !default;
+$light-gray:   #E6EDF4 !default;
+$gray:         #7F94AA !default;
+$dark-gray:    #343a40 !default;
+$ghost:        #F1F4F7 !default;
+$white:        #FFFFFF !default;
 
 
 $colors: () !default;
 $colors: map-merge(
 	(
-		"blue": $blue,
-		"indigo": $indigo,
-		"purple": $purple,
-		"pink": $pink,
-		"red": $red,
-		"orange": $orange,
-		"yellow": $yellow,
-		"green": $green,
-		"teal": $teal,
-		"cyan": $cyan,
-		"dark-gray": $dark-gray,
-		"ghost": $ghost,
-		"white": $white
+		'dark-blue': $dark-blue,
+		'blue': $blue,
+		'light-blue': $light-blue,
+		'x-light-blue': $x-light-blue,
+		'red': $red,
+		'green': $green,
+		'light-gray': $light-gray,
+		'gray': $gray,
+		'dark-gray': $dark-gray,
+		'ghost': $ghost,
+		'white': $white
 	),
 	$colors
 );
 
-$primary:       $blue !default;
-$secondary:     $indigo !default;
+$primary:       $dark-blue !default;
+$secondary:     $blue !default;
 $light:         $white !default;
 $dark:          $dark-gray !default;
 
@@ -53,7 +49,7 @@ $yiq-text-dark:             $dark !default;
 $yiq-text-light:            $light !default;
 
 $body-bg:                   $white !default;
-$body-color:                $dark !default;
+$body-color:                $dark-blue !default;
 
 $link-color:                $primary !default;
 $link-decoration:           none !default;
@@ -111,12 +107,13 @@ $component-active-bg:         $blue !default;
 
 // Typography
 
-$font-family-sans-serif:      "Roboto", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-sans-serif-alt:  #{$font-family-sans-serif} !default;
+$font-family-sans-serif:      "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif-alt:  "proxima-nova", #{$font-family-sans-serif} !default;
+$font-family-serif:           "utopia-std", serif;
 
-$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:                1.25rem !default;
-$font-size-sm:                0.75rem !default;
+$font-size-base:              1.25rem !default; // Assumes the browser default, typically `16px`
+$font-size-lg:                1.875rem !default;
+$font-size-sm:                1rem !default;
 
 $font-weight-lighter:         100 !default;
 $font-weight-light:           300 !default;
@@ -130,12 +127,12 @@ $line-height-base:            1.4 !default;
 $line-height-lg:              1.6 !default;
 $line-height-sm:              1.2 !default;
 
-$h1-font-size:                3rem !default;
+$h1-font-size:                3.75rem !default;
 $h2-font-size:                2.5rem !default;
 $h3-font-size:                2rem !default;
-$h4-font-size:                1.5rem !default;
-$h5-font-size:                1.25rem !default;
-$h6-font-size:                1rem !default;
+$h4-font-size:                1.75rem !default;
+$h5-font-size:                1.5rem !default;
+$h6-font-size:                1.25rem !default;
 
 $headings-margin-bottom:      1rem !default;
 $headings-font-family:        $font-family-sans-serif !default;
@@ -154,20 +151,22 @@ $lead-font-weight:            $font-weight-base !default;
 
 // Buttons + Forms
 
-$input-btn-padding-y:         0.75rem !default;
-$input-btn-padding-x:         1rem !default;
-$input-btn-font-family:       $font-family-sans-serif !default;
-$input-btn-font-size:         $font-size-base !default;
+$input-btn-padding-y:         .8rem !default;
+$input-btn-padding-x:         .8rem !default;
+$input-btn-font-family:       $font-family-sans-serif-alt !default;
+$input-btn-font-size:         1rem !default;
 $input-btn-line-height:       $line-height-sm !default;
 
-$input-btn-padding-y-sm:      .5rem !default;
-$input-btn-padding-x-sm:      .75rem !default;
-$input-btn-font-size-sm:      $font-size-sm !default;
+$input-btn-focus-width:       0 !default;
+
+$input-btn-padding-y-sm:      .4rem !default;
+$input-btn-padding-x-sm:      .6rem !default;
+$input-btn-font-size-sm:      0.75rem !default;
 $input-btn-line-height-sm:    $line-height-sm !default;
 
-$input-btn-padding-y-lg:      1rem !default;
-$input-btn-padding-x-lg:      1.25rem !default;
-$input-btn-font-size-lg:      $font-size-lg !default;
+$input-btn-padding-y-lg:      1.25rem !default;
+$input-btn-padding-x-lg:      1.5rem !default;
+$input-btn-font-size-lg:      1.5rem !default;
 $input-btn-line-height-lg:    $line-height-sm !default;
 
 $input-btn-border-width:      $border-width !default;
@@ -175,28 +174,28 @@ $input-btn-border-width:      $border-width !default;
 
 // Buttons
 
-$btn-padding-y:               1rem !default;
-$btn-padding-x:               1.5rem !default;
+$btn-padding-y:               $input-btn-padding-y !default;
+$btn-padding-x:               $input-btn-padding-x + .5rem !default;
 $btn-font-family:             $font-family-sans-serif !default;
-$btn-font-size:               1rem !default;
+$btn-font-size:               $input-btn-font-size !default;
 $btn-line-height:             $input-btn-line-height !default;
 
-$btn-padding-y-sm:            0.75rem !default;
-$btn-padding-x-sm:            1rem !default;
-$btn-font-size-sm:            0.75rem !default;
+$btn-padding-y-sm:            $input-btn-padding-y-sm !default;
+$btn-padding-x-sm:            $input-btn-padding-x-sm + .25rem !default;
+$btn-font-size-sm:            $input-btn-font-size-sm !default;
 $btn-line-height-sm:          $input-btn-line-height-sm !default;
 
-$btn-padding-y-lg:            1.25rem !default;
-$btn-padding-x-lg:            1.75rem !default;
-$btn-font-size-lg:            1.25rem !default;
+$btn-padding-y-lg:            $input-btn-padding-y-lg !default;
+$btn-padding-x-lg:            $input-btn-padding-x-lg + .75rem !default;
+$btn-font-size-lg:            $input-btn-font-size-lg !default;
 $btn-line-height-lg:          $input-btn-line-height-lg !default;
 
-$btn-font-weight:             $font-weight-bold !default;
-$btn-letter-spacing:          0 !default;
+$btn-font-weight:             700 !default;
+$btn-letter-spacing:          .05em !default;
 
-$btn-border-radius:           .1875rem !default;
-$btn-border-radius-lg:        .25rem !default;
-$btn-border-radius-sm:        .125rem !default;
+$btn-border-radius:           0 !default;
+$btn-border-radius-lg:        0 !default;
+$btn-border-radius-sm:        0 !default;
 
 
 // Forms
@@ -215,26 +214,28 @@ $form-control-selectors: (
 	'input[type="url"]',
 	'input[type="search"]',
 	'input[type="tel"]',
-	'input[type="color"]',
-	'select',
-	'textarea'
+	'input[type="color"]'
 ) !default;
 
-$input-bg:                              #fff !default;
-$input-disabled-bg:                     #e9e9e9 !default;
+$input-bg:                              transparent !default;
+$input-disabled-bg:                     transparent !default;
 
-$input-color:                           $dark !default;
-$input-border-color:                    #C7CDD0 !default;
+$input-color:                           $primary !default;
+$input-border-color:                    $primary !default;
 $input-border-width:                    $input-btn-border-width !default;
-$input-box-shadow:                      inset 0 1px 1px rgba(#000, .075) !default;
+$input-box-shadow:                      none !default;
 
-$input-border-radius:                   0.25rem !default;
-$input-border-radius-lg:                0.25rem !default;
-$input-border-radius-sm:                0.25rem !default;
+$input-border-radius:                   0 !default;
+$input-border-radius-lg:                0 !default;
+$input-border-radius-sm:                0 !default;
 
-$input-focus-border-color:              lighten($component-active-bg, 15%) !default;
+$input-focus-border-color:              $secondary !default;
 
-$input-placeholder-color:               #969696 !default;
+$input-placeholder-color:               rgba($primary, 0.5) !default;
+
+$form-group-margin-bottom:              1.5rem !default;
+
+$custom-select-border-radius:           $input-border-radius !default;
 
 
 // Z-Index
