--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -1,6 +1,7 @@
 
 
 // variables
+@import 'config/_functions';
 @import 'config/_variables';
 
 // libraries
@@ -8,8 +9,8 @@
 
 // configuration
 @import 'config/_fonts';
-@import 'config/_functions';
 @import 'config/_mixins';
+@import 'config/_icons';
 
 // core
 @import 'core/_scaffolding';
