--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -1,9 +1,13 @@
 
 
+body.mobile-menu-active {
+	overflow: hidden;
+}
+
 #page {
 	transition: transform .2s ease-out;
 	body.mobile-menu-active & {
-		transform: translate3d(-$mobile-menu-width, 0, 0);
+		transform: translate3d($mobile-menu-width, 0, 0);
 		@include media-breakpoint-up(md) {
 			transform: none;
 		}
@@ -13,7 +17,7 @@
 #mobile-menu {
 	position: fixed;
 	width: $mobile-menu-width;
-	left: 100%;
+	right: 100%;
 	top: 0;
 	bottom: 0;
 	transition: transform .2s ease-out, visibility 0s .2s;
@@ -25,7 +29,7 @@
 		display: none;
 	}
 	body.mobile-menu-active & {
-		transform: translate3d(-$mobile-menu-width, 0, 0);
+		transform: translate3d($mobile-menu-width, 0, 0);
 		visibility: visible;
 		transition-delay: 0s;
 	}
@@ -34,7 +38,7 @@
 		overflow-x: hidden;
 		height: 100%;
 		transition: transform .2s ease-out;
-		transform: translate3d(-($mobile-menu-width / 2), 0, 0);
+		transform: translate3d(($mobile-menu-width / 2), 0, 0);
 		body.mobile-menu-active & {
 			transform: none;
 		}
